--- a/poyasnizagistu/blog/static/blog/css/styles.css
+++ b/poyasnizagistu/blog/static/blog/css/styles.css
@@ -20,7 +20,6 @@ body {
 /* ЭЛЕМЕНТЫ НАВБАРА */
 .navbar-dark {
   padding: 1px;
-  margin-bottom: 2%;
   margin-left: 3%;
   margin-right: 3%;
   margin-top: 2%;
@@ -29,6 +28,7 @@ body {
   border-radius: 50%;
   /* margin-right:7px; */
   margin-left: 1%;
+  margin-right: 6px;
   border: 1px solid rgb(255, 255, 255); padding: 0.1px;
   /* box-shadow: 0 1px 5px rgb(255, 0, 200), 0 3px 3px rgb(255, 255, 255) */ 
 }
@@ -371,8 +371,8 @@ div.profile form p.label-ul-log input#id_username {
 
 /* СТИЛИ БЛОГА И КОНКРЕТНЫХ ПОСТОВ*/
 div.profile-2 {
-  margin-left: 3%;
-  margin-right: 3%;
+  margin-left: 4%;
+  margin-right: 4%;
   margin-top: 0%;
   margin-bottom: 2%;
   padding-bottom: 0.1%;
@@ -382,7 +382,8 @@ div.profile-2 {
   box-shadow: 0 0px 3px rgb(141, 141, 141), 0 0px 3px rgb(0, 0, 0); */
 }
 .profile-cust {
-  margin: 0%;
+  margin-left: 1%;
+  margin-right: 1%;
   margin-top: 3%;
   padding: 2%;
   border-radius: 1em;
@@ -418,25 +419,73 @@ button.dropdown-item.active {
   color: white;
 }
 .text-blog {
-  margin-top: 3%;
+  margin-top: 2%;
   text-align:justify;
   margin-bottom: 0%;
 
 }
-.card-body {
-padding-bottom:0px;
+div.card-body {
+padding:0px;
 }
 .card-footer {
 padding: 0px;
+background: none;
+}
+.image-posts {
+  border-radius: 1em;
+  height: 350px;
+  width: 100%;
+  object-fit: cover;
 }
 .image-post {
   border-radius: 1em;
-    height: 350px;
-    width: 100%;
-    object-fit: cover;
-
+  height:450px;
+  width: 100%;
+  object-fit: cover;
 }
 
+.btn-profile {
+  margin: 0px;
+
+ 
+}
+.comment-btn{
+  margin-bottom: 1%;
+
+}
+.form-comment{
+  margin-left: 15%;
+  margin-right: 15%;
+  padding: 1%;
+
+}
+.text-comment{
+  color: white;
+  padding: 0px;
+  margin: 0%;
+}
+.comment-content{
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-bottom: 1%;
+  padding: 1%;
+}
+.text-one-comment{
+  font-size: smaller;
+  text-align:justify;
+
+  
+}
+#id_text {
+  background-color: #63636349;
+  border-radius: 1rem;
+  color: rgb(255, 255, 255);
+  height: 200px;
+}
+.warning-comment{
+  color: rgba(119, 119, 119, 0.509);
+  font-size: smaller;
+}
 /* ТЕСТОВЫЕ СТИЛИ */
 .test-class {
   color: rgba(255, 255, 255, 0.986);
