--- a/poyasnizagistu/blog/templates/blog/category.html
+++ b/poyasnizagistu/blog/templates/blog/category.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/include/base.html' %}
 
 
 {% block title %}
@@ -8,6 +8,6 @@
 
 {% block content %}
 
-{% include 'blog/base_blog.html' %}
+{% include 'blog/include/base_blog.html' %}
 
 {% endblock %}
