--- a/poyasnizagistu/users/templates/registration/profile_change.html
+++ b/poyasnizagistu/users/templates/registration/profile_change.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/include/base.html' %}
 {% block title %}
     <title>Изменение профиля</title>
 {% endblock %}
