Настроил динамические пути для медиафайлов, убрал гитигнор с файлов виртуального окружения. Поменял стиль сайта

--- a/poyasnizagistu/albums/templates/albums/album.html
+++ b/poyasnizagistu/albums/templates/albums/album.html
@@ -114,7 +114,7 @@
         <div class="one-comment">
                 <div class="row">
                     <div class="col-lg-2 ">
-                        <img class="logo"  src='{{c.author.avatar.url}}' alt="Avatar" width="60em" height="55em" style="margin-right: 0px;">
+                        <img class="logo_comment"  src='{{c.author.avatar.url}}' alt="Avatar" width="60em" height="55em" style="margin-right: 0px;">
                         <p class="text-primary time" >{{c.author}}</p></span>
                         <p class="text-muted time">{{c.create_date}}</p>
                     </div>
