--- a/poyasnizagistu/blog/templates/blog/include/base.html
+++ b/poyasnizagistu/blog/templates/blog/include/base.html
@@ -44,7 +44,8 @@
                 <ul class="navbar-nav ms-auto">
 {% for m in menu %}
                     <li class="nav-item">
-                        <a class="nav-link"  href="{% url m.url_name %}">{{m.title}}</a>
+
+                        <a class="nav-link"  href="{% url m.url_name %}"  {% if m.url_name in request.path %} style='color: red;' {% endif %}>{{m.title}}</a>
                     </li>
 {% endfor %}
 		        </ul>
