Устранил баг с фоном в Ckeditor, устранил баг с неправильным отображением таблиц на странице

--- a/poyasnizagistu/articles/templates/articles/article.html
+++ b/poyasnizagistu/articles/templates/articles/article.html
@@ -15,7 +15,7 @@
             {%endfor%}
          {%endif%}
          </div>
-<div class="content text-center">
+<div class="content">
     <span class="right" style="float:right;"> <p class="text-danger time">Категория: {{article.thematic}}</p></span><span class="left" style="float:left;"><p class="text-muted time">{{thematic.time_create|date}}</p></span>
     <br>
     <hr class="text-white" style="margin-top:0%; margin-bottom:1%">
